force-app/main/default/objects/InsurancePolicyAsset/fields/Cover_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Cover_Effective_Date__c</fullName>
    <description>SFP-12614 Date cover comes into effect</description>
    <formula>CustomerProperty.Cover_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cover Effective Date</label>
    <type>Date</type>
</CustomField>