force-app/main/default/objects/InsurancePolicyAsset/fields/Customer_Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Property_Name__c</fullName>
    <description>SFP-12614 Indicates the name of the client&apos;s asset</description>
    <formula>CustomerProperty.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Description</label>
    <type>Text</type>
</CustomField>