force-app/main/default/objects/InsurancePolicyAsset/fields/Customer_Property_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Customer_Property_RecordType__c</fullName>
    <description>SFP-12614 Indicates which of the 3 record types are used.</description>
    <formula>CustomerProperty.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>