force-app/main/default/objects/InsurancePolicyAsset/fields/Insured_Value__c.field-meta.xml
<CustomField>
    <fullName>Insured_Value__c</fullName>
    <description>SFP-12614 Indicates an asset&apos;s insured value</description>
    <formula>CustomerProperty.FactoryPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>